[package]
name = "pxsort"
version = "0.1.0"
edition = "2021"


[dependencies]
anyhow = "1.0.71"
clap = { version = "4.3.0", features = ["derive", "string"] }
image = { version = "0.24.6", features = ["rgb", "webp-encoder"] }
indicatif = { version = "0.17.3", features = ["rayon"], git = "https://github.com/console-rs/indicatif" }
itertools = "0.10.5"
rand = "0.8.5"
rayon = "1.7.0"
